chore: add more product attributes
